# kded_brightness_master

./: CMakeLists.txt  README.md  install_kded_brightness.sh  kded_brightness.desktop  screen_light_manager.cpp  screen_light_manager.h  screen_light_manager_dbus_connector.cpp  screen_light_manager_dbus_connector.h
